--- a/corona-map/public/index.html
+++ b/corona-map/public/index.html
@@ -14,8 +14,13 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <script type="text/javaScript" src="./js/d3.js"></script>
+    <script type="text/javaScript" src="./js/crossfilter.js"></script>
+    <script type="text/javaScript" src="./js/dc.min.js"></script>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- Custom styling -->
+    <link rel="stylesheet" href="../src/css/dc.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,10 +30,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-     <title>코로나19 바이러스</title>
+     <title>대구 코로나19 환자 방문장소 확인</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- External JS libraries -->
     <div id="root"></div>
     <!--
       This HTML file is a template.
