Fix first rendering bug

--- a/corona-map/public/index.html
+++ b/corona-map/public/index.html
@@ -20,7 +20,7 @@
     <script type="text/javaScript" src="./js/dc.min.js"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Custom styling -->
-    <link rel="stylesheet" href="../src/css/dc.css">
+    <link rel="stylesheet" href="./css/dc.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
